--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
 		"noEmit": true,
 		"baseUrl": "./src",
 		"paths": {
-			"galena/*": [
+			"Galena/*": [
 				"Galena/*"
 			],
 			"Middleware/*": [
