--- a/package.json
+++ b/package.json
@@ -1,12 +1,31 @@
 {
-  "name": "galena",
-  "version": "1.0.1",
+  "name": "@figliolia/galena",
+  "version": "1.0.2",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
     "src/*"
+  ],
+  "author": "Alex Figliolia",
+  "license": "MIT",
+  "homepage": "https://github.com/alexfigliolia/galena#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alexfigliolia/galena.git"
+  },
+  "keywords": [
+    "state",
+    "state management",
+    "mutable",
+    "extendable",
+    "event",
+    "emitter",
+    "flux",
+    "island",
+    "batch",
+    "performance"
   ],
   "scripts": {
     "test": "jest",
@@ -35,11 +54,7 @@
     "tsc-alias": "^1.8.6",
     "typescript": "^4.4.2"
   },
-  "author": "Alex Figliolia",
-  "license": "MIT",
-  "homepage": "https://github.com/alexfigliolia/galena#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alexfigliolia/galena.git"
+  "publishConfig": {
+    "access": "public"
   }
 }
