--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@figliolia/galena",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -30,7 +30,7 @@
   "scripts": {
     "test": "jest",
     "coverage": "jest --env=jsdom --coverage --testResultsProcessor ./node_modules/jest-junit",
-    "build": "tsc --project tsconfig.build.json && tsc-alias -p tsconfig.build.json",
+    "build": "rm -rf dist && tsc --project tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "lint": "tsc --noemit && eslint ./ --fix"
   },
   "dependencies": {
