--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@figliolia/galena",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "A performant state management library supporting mutable state, batched updates, middleware and a rich development API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
