--- a/package.json
+++ b/package.json
@@ -36,34 +36,36 @@
     "performance"
   ],
   "scripts": {
-    "test": "jest",
-    "coverage": "jest --env=jsdom --coverage --testResultsProcessor ./node_modules/jest-junit",
-    "build": "npx ts-packager -e src",
-    "lint": "tsc --noemit && eslint ./ --fix"
+    "build": "ts-packager -e src",
+    "lint": "tsx ci/commands/Lint.ts",
+    "test": "tsx ci/commands/Test.ts"
   },
   "dependencies": {
-    "@figliolia/event-emitter": "^1.1.4"
+    "@figliolia/event-emitter": "^1.1.5"
   },
   "peerDependencies": {
-    "@figliolia/event-emitter": "^1.1.4"
+    "@figliolia/event-emitter": "^1.1.5"
   },
   "devDependencies": {
-    "@figliolia/ts-packager": "^1.0.3",
-    "@types/node": "^16.7.13",
+    "@figliolia/child-process": "^1.0.1",
+    "@figliolia/ts-packager": "^1.1.0",
+    "@types/node": "^20.11.19",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint": "^8.39.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-json-format": "^2.0.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^2.8.8",
-    "ts-node": "^10.9.1",
-    "tsc-alias": "^1.8.6",
-    "typescript": "^4.4.2"
+    "eslint-plugin-unused-imports": "3",
+    "prettier": "^3.2.4",
+    "tsc-alias": "^1.8.8",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3"
   },
   "publishConfig": {
     "access": "public"
