--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
-	"ts-node": {
-		// these options are overrides used only by ts-node
-		// same as the --compilerOptions flag and the TS_NODE_COMPILER_OPTIONS environment variable
+	"tsx": {
+		"typeCheck": false,
 		"compilerOptions": {
-			"module": "commonjs"
+			"module": "CommonJS",
+			"moduleResolution": "Node"
 		}
 	},
 	"compilerOptions": {
@@ -39,7 +39,16 @@
 		}
 	},
 	"include": [
-		"package.json",
-		"src"
+		"src",
+		"ci",
+		".eslintrc.cjs",
+		"**/*.json",
+		"**/*.ts",
+		"**/*.js"
+	],
+	"exclude": [
+		"coverage",
+		"dist",
+		"node_modules"
 	]
 }
